# Prototipo-Inova

./: CMakeLists.txt  Prototipo  Prototipo2  README.md  main copy.cpp  main.cpp  main2.cpp
src/niclib/: CMakeLists.txt
src/niclib/include/: Estruturas.h  Ferramentas.h  Lista.h  Relogio.h
src/niclib/lib/: Lista.cpp  No.cpp  Relogio.cpp
